fixed embed alignment

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -354,7 +354,6 @@ html, body {
 
 #imageDock {
   overflow : auto;
-  margin-left: 42px;
 }
 
 #imageLink {
